...
        }
    }
    Scaffold(
        content = { paddingValues ->
            Box(modifier = Modifier
                .fillMaxSize()
                .padding(paddingValues).testTag("edit_travel_screen")) {
                Column{
                    Form(navController= navController, isUpdateAction = id != null)
                }
            }
        },
        topBar = {
...
        ownerId = vm.travel.ownerId
    )

    Column(modifier = Modifier.fillMaxSize().background(MaterialTheme.colorScheme.background).verticalScroll(rememberScrollState())){
        Column(Modifier.fillMaxWidth(), horizontalAlignment = Alignment.CenterHorizontally){
            Spacer(Modifier.height(20.dp))
            InputField(name, KeyboardOptions(imeAction = ImeAction.Next), null, "Name*", labelColor = MaterialTheme.colorScheme.primary, testTag = "edit_travel_name")
            Spacer(Modifier.height(20.dp))
            InputField(city, KeyboardOptions(imeAction = ImeAction.Next), null, "City*", labelColor = MaterialTheme.colorScheme.primary, testTag = "edit_travel_city")
            Spacer(Modifier.height(20.dp))
            InputField(country, KeyboardOptions(imeAction = ImeAction.Next), null, "Country*", labelColor = MaterialTheme.colorScheme.primary, testTag = "edit_travel_country")
            Spacer(Modifier.height(20.dp))
            PrivateCheckBox(isPublic)
            Spacer(Modifier.height(20.dp))
            Row {
                DatePickerForm("Start date*", startDate)
                DatePickerForm("End date*", endDate)
            }
            Spacer(Modifier.height(20.dp))
            TagList()
            Spacer(Modifier.height(20.dp))
            PriceCurrencyForm(price,currency )
            Spacer(Modifier.height(20.dp))
            InputField(description, KeyboardOptions(imeAction = ImeAction.Next), null, "Description",labelColor = MaterialTheme.colorScheme.primary, lines = 4, testTag = "edit_travel_description")
            Spacer(Modifier.height(20.dp))
            Button(onClick = {
                if(isUpdateAction){
                    vm.update(travel, navController)
                }else{
                    vm.save(travel, context, navController)
...
            checked = isPublic.value,
            onCheckedChange = { isPublic.value = it },
            colors = androidx.compose.material3.CheckboxDefaults.colors(
                checkedColor = MaterialTheme.colorScheme.primary,
                uncheckedColor = MaterialTheme.colorScheme.primary
            ),
            modifier=Modifier.testTag("private_checkbox")
        )
    }
}

@Composable
private fun TagList(vm: TravelCreateUpdateViewModel = hiltViewModel()){
...
                maxLines = 1,
                textStyle = TextStyle(
                    fontSize = 20.sp,
                    fontWeight = FontWeight.Medium,
                    color = MaterialTheme.colorScheme.primary
                ),
                modifier=Modifier.testTag("edit_travel_price"),
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                decorationBox = { innerTextField ->
                    Row(
                        modifier = Modifier
                            .fillMaxWidth(0.5f)
                            .background(
...
            Spacer(modifier = Modifier.width(width = 8.dp))
            Box{
                Text(currency.value,
                    color = MaterialTheme.colorScheme.secondary,
                    modifier = Modifier
                        .padding(8.dp)
                        .clickable(onClick = { expanded.value = true }).testTag("edit_travel_currency")
                )
                DropdownMenu(expanded = expanded.value,
                    onDismissRequest = { expanded.value = false },
                    modifier = Modifier.background( MaterialTheme.colorScheme.secondaryContainer)) {
                    currencyItems.forEach { i ->
                        DropdownMenuItem(
...
